# claude-blog

./: .gitignore  CLAUDE.md  render.yaml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_posts_table.py
backend/app/: config.py  main.py
backend/app/models/: post.py
backend/app/repositories/: post.py
backend/app/routers/: posts.py
backend/app/schemas/: post.py
backend/tests/: conftest.py  test_post_repository.py  test_posts_api.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/api/: posts.ts
frontend/src/components/: Editor.tsx  Layout.tsx  PostForm.tsx  PostList.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/pages/: CreatePostPage.tsx  EditPostPage.tsx  HomePage.tsx  LandingPage.tsx  PostPage.tsx
frontend/src/types/: post.ts
frontend/src/utils/: stripMarkdown.ts
frontend/tests/: PostForm.test.tsx
